Increase build timeout for dns
Related-Prod: PRODX-42473
Change-Id: I50e7981f4db4042ad5f257316653878b88dbdf05

--- a/openstack_controller/templates/preset/compute-tf.yaml
+++ b/openstack_controller/templates/preset/compute-tf.yaml
@@ -314,6 +314,7 @@ services:
               production: true
             dns:
               tld_suffix: test
+              build_timeout: 600
             patrole:
               custom_policy_files: /etc/tempest/policies/%s.json
             sdn:
