--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr/context_template_args.yaml
@@ -192,6 +192,8 @@ identity:
   keystone_creds: {}
   credentials_secret_name: keystone-credential-data
   fernet_secret_name: keystone-fernet-data
+  federation:
+    enabled: false
 image:
   is_ceph_enabled: true
   ceph:
