--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_non_sl/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_non_sl/context_template_args.yaml
@@ -186,47 +186,46 @@ identity:
   credentials_secret_name: keystone-credential-data
   fernet_secret_name: keystone-fernet-data
   federation:
-    enabled: true
-    oidc:
-      OIDCResponseType: id_token
-      OIDCScope: openid
-      OIDCProviderMetadataURL: https://keycloak.it.just.works/auth/realms/iam/.well-known/openid-configuration
-      OIDCOAuthVerifyJwksUri: https://keycloak.it.just.works/auth/realms/iam/protocol/openid-connect/certs
-      OIDCClientID: os
-      OIDCCryptoPassphrase: zQGr6LP7k9wgTBjGF6uJr8Bw0bwKbN1Z
-      OIDCSSLValidateServer: "Off"
-      OIDCOAuthSSLValidateServer: "Off"
-      OIDCSessionInactivityTimeout: 1800
-      OIDCClaimDelimiter: '","'
-      OIDCClaimPrefix: '"OIDC-"'
-      OIDCRedirectURLsAllowed: ^https://horizon.it.just.works/auth/logout$
-      OIDCRedirectURI: https://keystone.it.just.works/v3/auth/OS-FEDERATION/identity_providers/keycloak/protocols/mapped/websso/
-    providers:
-      keycloak:
-        issuer: https://keycloak.it.just.works/auth/realms/iam
-        type: openid
-        protocol: mapped
-        mapping:
-          - local:
-            - user:
-                email: '{1}'
-                name: '{0}'
-            - groups: '{2}'
-            - domain:
-                name: Default
-            remote:
-            - type: OIDC-iam_username
-            - type: OIDC-email
-            - type: OIDC-iam_roles
-        metadata:
-          client:
-            key: value
-          conf:
-            key: value
-          provider:
-            value_from:
-              from_url:
-                url: https://keycloak.it.just.works/auth/realms/iam/.well-known/openid-configuration
+    openid:
+      enabled: true
+      oidc:
+        OIDCResponseType: id_token
+        OIDCScope: openid
+        OIDCProviderMetadataURL: https://keycloak.it.just.works/auth/realms/iam/.well-known/openid-configuration
+        OIDCOAuthVerifyJwksUri: https://keycloak.it.just.works/auth/realms/iam/protocol/openid-connect/certs
+        OIDCClientID: os
+        OIDCCryptoPassphrase: zQGr6LP7k9wgTBjGF6uJr8Bw0bwKbN1Z
+        OIDCSSLValidateServer: "Off"
+        OIDCOAuthSSLValidateServer: "Off"
+        OIDCSessionInactivityTimeout: 1800
+        OIDCClaimDelimiter: ","
+        OIDCClaimPrefix: "OIDC-"
+        OIDCRedirectURLsAllowed: ^https://horizon.it.just.works/auth/logout$
+        OIDCRedirectURI: https://keystone.it.just.works/v3/auth/OS-FEDERATION/identity_providers/keycloak/protocols/mapped/websso/
+      providers:
+        keycloak:
+          issuer: https://keycloak.it.just.works/auth/realms/iam
+          mapping:
+            - local:
+              - user:
+                  email: '{1}'
+                  name: '{0}'
+              - groups: '{2}'
+              - domain:
+                  name: Default
+              remote:
+              - type: OIDC-iam_username
+              - type: OIDC-email
+              - type: OIDC-iam_roles
+          metadata:
+            client:
+              key: value
+            conf:
+              key: value
+            provider:
+              value_from:
+                from_url:
+                  url: https://keycloak.it.just.works/auth/realms/iam/.well-known/openid-configuration
 image:
   is_ceph_enabled: true
   ceph:
